<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="#ffffff"
    android:orientation="vertical" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textColor="@color/colorTitleBG"
            android:textSize="20dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text"
                android:maxLines="10"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:text="@string/dialog_cancle"
                android:textColor="@color/colorTitleBG"/>
            <TextView
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center_vertical"
                android:text="@string/dialog_ok"
                android:textColor="@color/colorTitleBG"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>