<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="#ffffff"
    android:orientation="vertical" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_choose_your_language"
            android:textColor="@color/colorTitleBG"
            android:textSize="20dp"/>

        <LinearLayout
            android:id="@+id/korean"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/korean_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/dialog_korea"
                android:textColor="@color/black"/>
        </LinearLayout >
        <LinearLayout
            android:id="@+id/english"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/english_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/dialog_english"
                android:textColor="@color/black"/>
        </LinearLayout >
        <LinearLayout
            android:id="@+id/japan"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/japan_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/dialog_japan"
                android:textColor="@color/black"/>
        </LinearLayout >
    </LinearLayout>
</RelativeLayout>