<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="#ffffff"
    android:orientation="vertical" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sorting_menu"
            android:textColor="@color/colorTitleBG"
            android:textSize="20dp"/>

        <LinearLayout
            android:id="@+id/sort_by_name"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_title"/>
            <TextView
                android:id="@+id/sort_by_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/dialog_sorting_menu_name"
                android:textColor="@color/black"/>
        </LinearLayout >
        <LinearLayout
            android:id="@+id/sort_by_extension"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_file"/>
            <TextView
                android:id="@+id/sort_by_extension_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/dialog_sorting_menu_extension"
                android:textColor="@color/black"/>
        </LinearLayout >
        <LinearLayout
            android:id="@+id/sort_by_date"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_date"/>
            <TextView
                android:id="@+id/sort_by_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/dialog_sorting_menu_date"
                android:textColor="@color/black"/>
        </LinearLayout >
    </LinearLayout>
</RelativeLayout>