<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="#ffffff"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_select_tag"
            android:textColor="@color/colorTitleBG"
            android:textSize="20dp"/>
        <myfilemanager.jiran.com.myfilemanager.custom.MaxHeightScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:maxHeight="250dp"
            android:scrollbars="none"
            android:overScrollMode="never">
            <LinearLayout
                android:id="@+id/dialog_tag_list_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/tag_color_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/tag_red_s"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Tag Name"
                        android:textColor="@color/black"/>
                </LinearLayout -->
            </LinearLayout>
        </myfilemanager.jiran.com.myfilemanager.custom.MaxHeightScrollView>
        <LinearLayout
            android:id="@+id/create_new_tag"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_new_red"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:text="@string/dialog_create_new_tag"
                android:textColor="@color/colorTitleBG"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/delete_tag"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_delete_red"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:text="@string/dialog_relese_tag"
                android:textColor="@color/colorTitleBG"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:text="@string/dialog_cancle"
                android:textColor="@color/colorTitleBG"/>
            <TextView
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/dialog_create"
                android:textColor="@color/colorTitleBG"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>