<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="#ffffff"
    android:orientation="vertical" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_new_tag"
            android:textColor="@color/colorTitleBG"
            android:textSize="20dp"/>

        <RelativeLayout
            android:id="@+id/layout_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" >
            <TextView
                android:id="@+id/tag_label"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_tag_label"
                android:textSize="11dp"/>

            <EditText
                android:id="@+id/edt"
                android:layout_below="@+id/tag_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:hint="@string/dialog_new_tag_name"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/gray4"
                android:textColorHint="@color/gray4"
                android:textSize="15dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/edt"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorTitleBG" />
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_tag_color"
                android:textSize="11dp"/>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/tag_color_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/tag_red_s" />
                </RelativeLayout>
                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/tag_color_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/tag_orange_s"/>

                </RelativeLayout>
                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/tag_color_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/tag_yellow_s"/>

                </RelativeLayout>
                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/tag_color_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/tag_green_s"/>

                </RelativeLayout>
                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/tag_color_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/tag_sky_s"/>

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/tag_color_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/tag_indigo_s"/>

                </RelativeLayout>
                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/tag_color_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/tag_pupple_s"/>

                </RelativeLayout>
                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/tag_color_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/tag_black_s"/>

                </RelativeLayout>
                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/tag_color_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/tag_grey_s"/>

                </RelativeLayout>
                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/tag_color_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/tag_lightgrey_s"/>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:text="@string/dialog_cancle"
                android:textColor="@color/colorTitleBG"/>
            <TextView
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/dialog_create"
                android:textColor="@color/colorTitleBG"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>